--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-
   </head>
   <body>
     <div class="login-container">
@@ -33,6 +32,29 @@
         </div>
         <label> <input type="checkbox" id="rememberMe" /> Remember me </label>
         <button type="submit">Login</button>
+        <div class="card">
+          <div class="header">
+            <div class="img-box">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path fill="none" d="M0 0h24v24H0z"></path>
+                <path
+                  d="M20.083 15.2l1.202.721a.5.5 0 0 1 0 .858l-8.77 5.262a1 1 0 0 1-1.03 0l-8.77-5.262a.5.5 0 0 1 0-.858l1.202-.721L12 20.05l8.083-4.85zm0-4.7l1.202.721a.5.5 0 0 1 0 .858L12 17.65l-9.285-5.571a.5.5 0 0 1 0-.858l1.202-.721L12 15.35l8.083-4.85zm-7.569-9.191l8.771 5.262a.5.5 0 0 1 0 .858L12 13 2.715 7.429a.5.5 0 0 1 0-.858l8.77-5.262a1 1 0 0 1 1.03 0zM12 3.332L5.887 7 12 10.668 18.113 7 12 3.332z"
+                  fill="rgba(66,193,110,1)"
+                ></path>
+              </svg>
+            </div>
+            <span class="title"> Attentions </span>
+          </div>
+
+          <div class="content">
+            <p>
+              ini website buatan saya sendiri, saya sebagai yoressu selaku membuat web ini 
+              mau mengatakan jika kurang bagus BUAT SENDIRI BOSSS!!!,
+            </p>
+
+            <a class="btn-link">Read More...</a>
+          </div>
+        </div>
       </form>
       <p id="errorMessage" class="error-message"></p>
     </div>
@@ -43,7 +65,7 @@
       </video>
     </div>
     <script>
- document.addEventListener("DOMContentLoaded", (event) => {
+      document.addEventListener("DOMContentLoaded", (event) => {
         const storedUsername = localStorage.getItem("username");
         const storedPassword = localStorage.getItem("password");
 
@@ -77,7 +99,6 @@
 
               window.location.href = "login.html";
             } else {
-     
               if (username === storedUsername && password === storedPassword) {
                 if (rememberMe) {
                   localStorage.setItem("username", username);
