--- a/login.html
+++ b/login.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+    rel="stylesheet"
+  />
   </head>
   <body>
     <button id="toggle-button">☰</button>
@@ -42,7 +46,7 @@
           <li><a href="#" data-content="shop">Shop</a></li>
           <li><a href="#" data-content="contact">Contact</a></li>
           <li><a href="#" data-content="about">About</a></li>
-          <li><a href="#" data-content="plot">Plot twist</a></li>
+          <li><a href="#" data-content="portfolio">portfolio</a></li>
           <li>
             <button class="Btn" id="logoutButton">
               <div class="sign">
