--- a/index.html
+++ b/index.html
@@ -12,26 +12,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   </head>
   <body>
+    <form class="form" id="loginForm">
+      <input type="text" class="input" id="username" placeholder="Name" required>
+      <input type="password" class="input" id="password" placeholder="Password" required>
+      <button type="submit">Submit</button>
+    </form>
     <div class="login-container">
-      <h2>Welcome to tobitto</h2>
-      <form id="loginForm">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required />
-
-        <label for="password">Password</label>
-        <div class="password-input-container">
-          <input type="password" id="password" name="password" required />
-          <span
-            class="toggle-password"
-            id="togglePassword"
-            onclick="togglePasswordVisibility()"
-          >
-            <i class="fas fa-eye-slash"></i>
-            <i class="fas fa-eye" style="display: none"></i>
-          </span>
-        </div>
-        <label> <input type="checkbox" id="rememberMe" /> Remember me </label>
-        <button type="submit">Login</button>
+  
+      </div>
         <div class="card">
           <div class="header">
             <div class="img-box">
@@ -48,8 +36,7 @@
 
           <div class="content">
             <p>
-              ini website buatan saya sendiri, saya sebagai yoressu selaku membuat web ini 
-              mau mengatakan jika kurang bagus BUAT SENDIRI BOSSS!!!,
+              Perhatian guys ini login dan sign up dijadikan satu,Dan jika sudah login username dan password di lock supaya tidak bug. sekian dan terima kasih 
             </p>
 
             <a class="btn-link">Read More...</a>
@@ -65,73 +52,49 @@
       </video>
     </div>
     <script>
-      document.addEventListener("DOMContentLoaded", (event) => {
-        const storedUsername = localStorage.getItem("username");
-        const storedPassword = localStorage.getItem("password");
+   document.addEventListener("DOMContentLoaded", (event) => {
+            const storedUsername = localStorage.getItem("username");
+            const storedPassword = localStorage.getItem("password");
 
-        // Check if it's the first login (no stored username and password)
-        if (storedUsername && storedPassword) {
-          document.getElementById("username").value = storedUsername;
-
-          if (localStorage.getItem("rememberMe") === "true") {
-            document.getElementById("password").value = storedPassword;
-            document.getElementById("rememberMe").checked = true;
-          }
-        }
-
-        document
-          .getElementById("loginForm")
-          .addEventListener("submit", function (event) {
-            event.preventDefault(); // Prevent form submission
-
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-            const rememberMe = document.getElementById("rememberMe").checked;
-
-            if (!storedUsername && !storedPassword) {
-              // First time login, store the username and password
-              localStorage.setItem("username", username);
-              localStorage.setItem("password", password);
-
-              if (rememberMe) {
-                localStorage.setItem("rememberMe", true);
-              }
-
-              window.location.href = "login.html";
-            } else {
-              if (username === storedUsername && password === storedPassword) {
-                if (rememberMe) {
-                  localStorage.setItem("username", username);
-                  localStorage.setItem("password", password);
-                  localStorage.setItem("rememberMe", true);
-                } else {
-                  localStorage.removeItem("password");
-                  localStorage.removeItem("rememberMe");
-                }
-
-                window.location.href = "login.html";
-              } else {
-                document.getElementById("errorMessage").textContent =
-                  "Incorrect username or password";
-              }
+            if (storedUsername && storedPassword) {
+                document.getElementById("username").value = storedUsername;
+                document.getElementById("password").value = storedPassword;
+                document.getElementById("username").readOnly = true;
+                document.getElementById("password").readOnly = true;
             }
-          });
-      });
 
-      function togglePasswordVisibility() {
-        const passwordInput = document.getElementById("password");
-        const toggleBtn = document.getElementById("togglePassword");
+            document.getElementById("loginForm").addEventListener("submit", function (event) {
+                event.preventDefault();
 
-        if (passwordInput.type === "password") {
-          passwordInput.type = "text";
-          toggleBtn.querySelector(".fa-eye-slash").style.display = "none";
-          toggleBtn.querySelector(".fa-eye").style.display = "inline";
-        } else {
-          passwordInput.type = "password";
-          toggleBtn.querySelector(".fa-eye-slash").style.display = "inline";
-          toggleBtn.querySelector(".fa-eye").style.display = "none";
+                const username = document.getElementById("username").value;
+                const password = document.getElementById("password").value;
+
+                if (!storedUsername && !storedPassword) {
+                    localStorage.setItem("username", username);
+                    localStorage.setItem("password", password);
+                    window.location.href = "login.html";
+                } else if (username === storedUsername && password === storedPassword) {
+                    window.location.href = "login.html";
+                } else {
+                    document.getElementById("errorMessage").textContent = "Incorrect username or password";
+                }
+            });
+        });
+
+        function togglePasswordVisibility() {
+            const passwordInput = document.getElementById("password");
+            const toggleBtn = document.getElementById("togglePassword");
+
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                toggleBtn.querySelector(".fa-eye-slash").style.display = "none";
+                toggleBtn.querySelector(".fa-eye").style.display = "inline";
+            } else {
+                passwordInput.type = "password";
+                toggleBtn.querySelector(".fa-eye-slash").style.display = "inline";
+                toggleBtn.querySelector(".fa-eye").style.display = "none";
+            }
         }
-      }
     </script>
   </body>
 </html>
